# gradlens

./: .gitignore  LICENSE  README.md
.claude/: launch.json
api/: .env.example  README.md  pyproject.toml
api/src/gradlens_api/: __init__.py  cli.py  config.py  main.py
api/src/gradlens_api/ingest/: __init__.py  cli.py  greenhouse.py  models.py  store.py
api/src/gradlens_api/routers/: __init__.py  health.py  search.py
api/src/gradlens_api/search/: __init__.py  build_cli.py  embed.py  index.py  retrieve.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: search-console.tsx
web/src/lib/: api.ts
